--- a/index.html
+++ b/index.html
@@ -360,10 +360,6 @@
       </div>
     </div>
 
-
-
-
-
     <!--Espaco para anuncios-->
     <div class="container">
       <div class="row marcador align-items-center">
@@ -389,44 +385,63 @@
               </div>
               <div class="carousel-item">
                 <!-- START ADVERTISER: Dafiti BR from awin.com -->
-
                 <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016840&v=17697&q=418432&r=1365819">
                   <img src="https://www.awin1.com/cshow.php?s=3016840&v=17697&q=418432&r=1365819" border="0">
                 </a>
-
                 <!-- END ADVERTISER: Dafiti BR from awin.com -->
               </div>
 
               <div class="carousel-item">
-
                 <!-- START ADVERTISER: Dafiti BR from awin.com -->
-
                 <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3005813&v=17697&q=418432&r=1365819">
                   <img src="https://www.awin1.com/cshow.php?s=3005813&v=17697&q=418432&r=1365819" border="0">
                 </a>
-
                 <!-- END ADVERTISER: Dafiti BR from awin.com -->
-
               </div>
 
 
               <div class="carousel-item">
-
-
                 <!-- START ADVERTISER: C&A BR from awin.com -->
-
                 <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3163537&v=17648&q=429783&r=1365819">
                   <img src="https://www.awin1.com/cshow.php?s=3163537&v=17648&q=429783&r=1365819" border="0">
                 </a>
-
                 <!-- END ADVERTISER: C&A BR from awin.com -->
+              </div>
 
-
-
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016825&v=17697&q=418432&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3016825&v=17697&q=418432&r=1365819" border="0">
+                </a>
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
               </div>
 
 
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2939738&v=17697&q=418432&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=2939738&v=17697&q=418432&r=1365819" border="0">
+                </a>
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+              </div>
 
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016833&v=17697&q=418432&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3016833&v=17697&q=418432&r=1365819" border="0">
+                </a>
+
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+              </div>
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2866771&v=17697&q=411633&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=2866771&v=17697&q=411633&r=1365819" border="0">
+                </a>
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
               data-bs-slide="prev">
