--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
+
+    div#carouselExampleAutoplaying img {
+        height: 350px;
+    }
     .carousel-inner img {
       max-width: 100%;
     }
