--- a/index.html
+++ b/index.html
@@ -446,6 +446,26 @@
                 </a>
                 <!-- END ADVERTISER: Dafiti BR from awin.com -->
               </div>
+
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Vivara BR from awin.com -->
+
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3131220&v=17662&q=396409&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3131220&v=17662&q=396409&r=1365819" border="0">
+                </a>
+
+                <!-- END ADVERTISER: Vivara BR from awin.com -->
+              </div>
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Vivara BR from awin.com -->
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3131205&v=17662&q=396409&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3131205&v=17662&q=396409&r=1365819" border="0">
+                </a>
+                <!-- END ADVERTISER: Vivara BR from awin.com -->
+              </div>
+
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
               data-bs-slide="prev">
