--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
-
     div#carouselExampleAutoplaying img {
-        height: 350px;
+      height: 350px;
     }
+
     .carousel-inner img {
       max-width: 100%;
     }
@@ -387,6 +387,15 @@
                   <img src="https://www.awin1.com/cshow.php?s=3314277&v=17884&q=391846&r=1365819" border="0">
                 </a>
               </div>
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016835&v=17697&q=418432&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3016835&v=17697&q=418432&r=1365819" border="0">
+                </a>
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+              </div>
+
               <div class="carousel-item">
                 <!-- START ADVERTISER: Dafiti BR from awin.com -->
                 <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016840&v=17697&q=418432&r=1365819">
@@ -464,6 +473,15 @@
                   <img src="https://www.awin1.com/cshow.php?s=3131205&v=17662&q=396409&r=1365819" border="0">
                 </a>
                 <!-- END ADVERTISER: Vivara BR from awin.com -->
+              </div>
+
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016826&v=17697&q=418432&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3016826&v=17697&q=418432&r=1365819" border="0">
+                </a>
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
               </div>
 
             </div>
