--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                     style="max-width: 100%;">
                 </a>
               </div>
-              
+
               <div class="carousel-item">
                 <!-- START ADVERTISER: Dafiti BR from awin.com -->
                 <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016835&v=17697&q=418432&r=1365819">
@@ -485,6 +485,67 @@
                   <img src="https://www.awin1.com/cshow.php?s=3016826&v=17697&q=418432&r=1365819" border="0">
                 </a>
                 <!-- END ADVERTISER: Dafiti BR from awin.com -->
+              </div>
+
+              <div class="carousel-item">
+
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016838&v=17697&q=418432&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3016838&v=17697&q=418432&r=1365819" border="0">
+                </a>
+
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+
+              </div>
+
+              <div class="carousel-item">
+
+
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3016834&v=17697&q=418432&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=3016834&v=17697&q=418432&r=1365819" border="0">
+                </a>
+
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+
+
+              </div>
+
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2905204&v=17697&q=388570&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=2905204&v=17697&q=388570&r=1365819" border="0">
+                </a>
+
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+              </div>
+
+
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2828814&v=17697&q=388567&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=2828814&v=17697&q=388567&r=1365819" border="0">
+                </a>
+
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+
+              </div>
+
+              <div class="carousel-item">
+                <!-- START ADVERTISER: Dafiti BR from awin.com -->
+
+                <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2631455&v=17697&q=388567&r=1365819">
+                  <img src="https://www.awin1.com/cshow.php?s=2631455&v=17697&q=388567&r=1365819" border="0">
+                </a>
+
+                <!-- END ADVERTISER: Dafiti BR from awin.com -->
+
               </div>
 
             </div>
