--- a/index.html
+++ b/index.html
@@ -224,7 +224,18 @@
             <div id="carouselExampleAutoplayingTop" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
 
+
                 <div class="carousel-item active">
+                  <!-- START ADVERTISER: HD Store BR from awin.com -->
+
+                  <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3156441&v=27223&q=438679&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=3156441&v=27223&q=438679&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: HD Store BR from awin.com -->
+                </div>
+                
+                <div class="carousel-item">
                   <!-- START ADVERTISER: C&A BR from awin.com -->
 
                   <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3163539&v=17648&q=429787&r=1365819">
@@ -377,6 +388,26 @@
                     style="max-width: 100%;">
                 </a>
               </div>
+
+          <div class="carousel-item active">
+            <!-- START ADVERTISER: HD Store BR from awin.com -->
+
+            <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3156437&v=27223&q=438679&r=1365819">
+              <img src="https://www.awin1.com/cshow.php?s=3156437&v=27223&q=438679&r=1365819" border="0">
+            </a>
+
+            <!-- END ADVERTISER: HD Store BR from awin.com -->
+          </div>
+
+            <div class="carousel-item">
+              <!-- START ADVERTISER: COMFY BR from awin.com -->
+
+              <a rel="sponsored" href="https://www.awin1.com/cread.php?s=2926496&v=23377&q=417172&r=1365819">
+                <img src="https://www.awin1.com/cshow.php?s=2926496&v=23377&q=417172&r=1365819" border="0">
+              </a>
+
+              <!-- END ADVERTISER: COMFY BR from awin.com -->
+            </div>
 
               <div class="carousel-item">
                 <!-- START ADVERTISER: Dafiti BR from awin.com -->
