--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
       <div class="row marcador align-items-center">
         <div class="col mx-auto text-center">
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <a rel="sponsored"
@@ -389,7 +390,7 @@
                 </a>
               </div>
 
-          <div class="carousel-item active">
+          <div class="carousel-item">
             <!-- START ADVERTISER: HD Store BR from awin.com -->
 
             <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3156437&v=27223&q=438679&r=1365819">
