--- a/index.html
+++ b/index.html
@@ -224,11 +224,30 @@
             <div id="carouselExampleAutoplayingTop" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
 
+                <div class="carousel-item active">
+                  <!-- START ADVERTISER: ANUNCIE AQUI -->
+
+                  <a rel="sponsored" href="https://compartilharnarede.com.br/image/data/anuncios_diversos_adicionais/diverso-2_1.jpg">
+                    <img src="https://www.awin1.com/cshow.php?s=3156441&v=27223&q=438679&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: HD Store BR from awin.com -->
+                </div>
 
                 <div class="carousel-item active">
                   <!-- START ADVERTISER: HD Store BR from awin.com -->
 
                   <a rel="sponsored" href="https://www.awin1.com/cread.php?s=3156441&v=27223&q=438679&r=1365819">
+                    <img src="https://www.awin1.com/cshow.php?s=3156441&v=27223&q=438679&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: HD Store BR from awin.com -->
+                </div>
+
+                <div class="carousel-item active">
+                  <!-- START ADVERTISER: ANUNCIE AQUI -->
+
+                  <a rel="sponsored" href="https://compartilharnarede.com.br/image/data/anuncios_diversos_adicionais/diverso-2_1.jpg">
                     <img src="https://www.awin1.com/cshow.php?s=3156441&v=27223&q=438679&r=1365819" border="0">
                   </a>
 
@@ -243,6 +262,16 @@
                   </a>
 
                   <!-- END ADVERTISER: C&A BR from awin.com -->
+                </div>
+
+                  <div class="carousel-item active">
+                  <!-- START ADVERTISER: ANUNCIE AQUI -->
+
+                  <a rel="sponsored" href="https://compartilharnarede.com.br/image/data/anuncios_diversos_adicionais/diverso-2_1.jpg">
+                    <img src="https://www.awin1.com/cshow.php?s=3156441&v=27223&q=438679&r=1365819" border="0">
+                  </a>
+
+                  <!-- END ADVERTISER: HD Store BR from awin.com -->
                 </div>
 
                 <div class="carousel-item">
