--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 </a>
               </div>
 
-          <div class="carousel-item active">
+          <div class="carousel-item">
             <!-- START ADVERTISER: ANUNCIE AQUI -->
 
             <a rel="sponsored">
