--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
           <div class="row" style="width: 100%;">
             <div class="col-5">
               <a style="font-weight: bold;background-color: #1e297e !important;width: 100%;"
-                <!--href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe"-->
-                class="btn btn-success btn-lg">Nova versao indisponivel no memento</a>
+                href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe"
+                class="btn btn-success btn-lg">Baixar</a>
             </div>
           </div>
-          <p class="text-body-secondary">Versão Atual: V2.0.7 <br>Antes de Baixar leia nosso artigo abaixo, <a
+          <p class="text-body-secondary">Versão Atual: V2.0.8 <br>Antes de Baixar leia nosso artigo abaixo, <a
               href="#download">fazendo dowload</a> ou assista nosso video explicativo <a
               href="https://www.youtube.com/watch?v=V4NffxK86-k" target="_blank">clicando aqui</a>.</p>
           <h3 class="fw-bold">Always ON</h3>
