--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2501508509118976"
     crossorigin="anonymous"></script>
 
+  <script> 
+    alert("Baixa a nova versão 2.0.8 para continuar utilizando nossos serviços");
+  </script>
+  
   <!-- Google tag (gtag.js) --> 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NEEEN36R6C"></script>
   <script>
