--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="auto">
 
 <head>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2501508509118976"
@@ -44,7 +44,7 @@
   <link rel="icon" type="image/x-icon" href="icons8-conectado-48.ico">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/features/">
 
-  <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">-->
 
   <style>
     div#carouselExampleAutoplaying img {
