--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2501508509118976"
     crossorigin="anonymous"></script>
+
+  <script type="text/javascript">
+    $(window).on('load', function() {
+        $('#myModal').modal('show');
+    });
+  </script>
   
   <!-- Google tag (gtag.js) --> 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NEEEN36R6C"></script>
@@ -421,6 +427,9 @@
     </div>
 
   </main>
+  <!-- Vertically centered modal -->
+    <div id="myModal" class="modal-dialog modal-dialog-centered">Uma nova versão esta disponivel realize o download para continuar utilizando nossos serviços.</div>
+
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
