--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <script type="text/javascript">
     $(window).on('load', function() {
-        $('#myModal').modal('show');
+        var mod = new bootstrap.Modal(document.getElementById("myModal"), {});
+        mod.show();
     });
   </script>
   
@@ -428,7 +429,23 @@
 
   </main>
   <!-- Vertically centered modal -->
-    <div id="myModal" class="modal-dialog modal-dialog-centered">Uma nova versão esta disponivel realize o download para continuar utilizando nossos serviços.</div>
+  <div class="modal fade" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Uma nova versão esta disponivel realize o download para continuar utilizando nossos serviços.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Understood</button>
+      </div>
+    </div>
+  </div>
+  </div>
 
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
