--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Uma nova versão esta disponivel realize o download para continuar utilizando nossos serviços.
+        Uma nova versão esta disponível realize o download para continuar utilizando nossos serviços.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
