--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     crossorigin="anonymous"></script>
 
   <script type="text/javascript">
-    $(window).on('load', function() {
+
+    window.onload = function() {
         var mod = new bootstrap.Modal(document.getElementById("myModal"), {});
         mod.show();
-    });
+    }
   </script>
   
   <!-- Google tag (gtag.js) --> 
