--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                         <strong class="d-inline-block mb-2 text-primary">Em Breve</strong>
                         <h3 class="mb-0">DESAFIOS HOME OFFICE</h3>
                         <div class="mb-1 text-muted">Aguarde para conhecer nosso blog</div>
-                        <p class="card-text mb-auto">Conheça os desafios do home office no nosso blog em breve aguard</p>
+                        <p class="card-text mb-auto">Conheça os desafios do home office no nosso blog em breve aguarde</p>
                         <a href="#" class="stretched-link">Aguarde</a>
                       </div>
                       <div class="col-auto d-none d-lg-block">
@@ -417,7 +417,7 @@
                         <strong class="d-inline-block mb-2 text-primary">Em Breve</strong>
                         <h3 class="mb-0">DESAFIOS HOME OFFICE</h3>
                         <div class="mb-1 text-muted">Aguarde para conhecer nosso blog</div>
-                        <p class="card-text mb-auto">Conheça os desafios do home office no nosso blog em breve aguard</p>
+                        <p class="card-text mb-auto">Conheça os desafios do home office no nosso blog em breve aguarde</p>
                         <a href="#" class="stretched-link">Aguarde</a>
                       </div>
                       <div class="col-auto d-none d-lg-block">
