--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         <h3 class="mb-0">HOME OFFICE Vantagens e Desafios</h3>
                         <div class="mb-1 text-muted">O que esperar do trabalho remoto</div>
                         <p class="card-text mb-auto">Saiba os desafios e vantagens desse modelo de trabalho</p>
-                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" class="stretched-link">Continuar lendo</a>
+                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank" class="stretched-link">Continuar lendo</a>
                       </div>
                       <div class="col-auto d-none d-lg-block">
                         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
@@ -367,7 +367,7 @@
                         <h3 class="mb-0">HOME OFFICE Vantagens e Desafios</h3>
                         <div class="mb-1 text-muted">O que esperar do trabalho remoto</div>
                         <p class="card-text mb-auto">Saiba os desafios e vantagens desse modelo de trabalho</p>
-                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" class="stretched-link">Continuar lendo</a>
+                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank" class="stretched-link">Continuar lendo</a>
                       </div>
                       <div class="col-auto d-none d-lg-block">
                         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
@@ -396,7 +396,7 @@
                         <h3 class="mb-0">HOME OFFICE Vantagens e Desafios</h3>
                         <div class="mb-1 text-muted">O que esperar do trabalho remoto</div>
                         <p class="card-text mb-auto">Saiba os desafios e vantagens desse modelo de trabalho</p>
-                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" class="stretched-link">Continuar lendo</a>
+                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank" class="stretched-link">Continuar lendo</a>
                       </div>
                       <div class="col-auto d-none d-lg-block">
                         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
@@ -418,7 +418,7 @@
                         <h3 class="mb-0">HOME OFFICE Vantagens e Desafios</h3>
                         <div class="mb-1 text-muted">O que esperar do trabalho remoto</div>
                         <p class="card-text mb-auto">Saiba os desafios e vantagens desse modelo de trabalho</p>
-                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" class="stretched-link">Continuar lendo</a>
+                        <a href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank" class="stretched-link">Continuar lendo</a>
                       </div>
                       <div class="col-auto d-none d-lg-block">
                         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
