--- a/index.html
+++ b/index.html
@@ -232,13 +232,12 @@
 
 
                   <div class="carousel-item active">
-                  <!-- START ADVERTISER: Anuncie aqui -->
-
-                  <a rel="sponsored">
-                    <img src="https://www.extranewsms.com.br/images/anuncios/34ef9f31bf11ca546021828c29771ea6.png" border="0">
+                  <a rel="sponsored"  href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank">
+                    <div class="card-body">
+                        <h5 class="card-title">Home Oficce Vantagens e benecifios </h5>
+                        <p class="card-text">Clique aqui e saiba mais sobre as vantagens e benecios do home office</p>
+                    </div>
                   </a>
-
-                  <!-- END ADVERTISER: HD Store BR from awin.com -->
                 </div>
 
               </div>
