--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 
                   <div class="carousel-item active">
-                    <a rel="sponsored"  href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank">
+                    <a rel="sponsored" style="color: black;text-decoration: none;" href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank">
                       <div class="card-body">
                           <h5 class="card-title">Home Oficce Vantagens e benecifios </h5>
                           <p class="card-text">Clique aqui e saiba mais sobre as vantagens e benecios do home office</p>
@@ -240,7 +240,7 @@
                     </a>
                   </div>
                  <div class="carousel-item">
-                    <a rel="sponsored"  href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank">
+                    <a rel="sponsored" style="color: black;text-decoration: none;" href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank">
                       <div class="card-body">
                           <h5 class="card-title">Home Oficce Vantagens e benecifios </h5>
                           <p class="card-text">Clique aqui e saiba mais sobre as vantagens e benecios do home office</p>
