--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@
                   <div class="carousel-item active">
                     <a rel="sponsored" style="color: black;text-decoration: none;" href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank">
                       <div class="card-body">
-                          <h5 class="card-title">Home Oficce Vantagens e benecifios </h5>
-                          <p class="card-text">Clique aqui e saiba mais sobre as vantagens e benecios do home office</p>
+                          <h5 class="card-title">Home Oficce Vantagens e Desafios </h5>
+                          <p class="card-text">Clique aqui e saiba mais sobre as vantagens e desafios do home office</p>
                       </div>
                     </a>
                   </div>
                  <div class="carousel-item">
                     <a rel="sponsored" style="color: black;text-decoration: none;" href="https://jeanoliveiragomes.github.io/blog/homeofficevd.html" target="_blank">
                       <div class="card-body">
-                          <h5 class="card-title">Home Oficce Vantagens e benecifios </h5>
-                          <p class="card-text">Clique aqui e saiba mais sobre as vantagens e benecios do home office</p>
+                          <h5 class="card-title">Home Oficce Vantagens e Desafios </h5>
+                          <p class="card-text">Clique aqui e saiba mais sobre as vantagens e desafios do home office</p>
                       </div>
                     </a>
                   </div>
