--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <div class="row" style="width: 100%;">
             <div class="col-5">
               <a style="font-weight: bold;background-color: #1e297e !important;width: 100%;"
-                href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.exe"
+                href="https://github.com/JeanOliveiraGomes/jeanoliveiragomes.github.io/raw/main/AlwaysON.zip"
                 class="btn btn-success btn-lg">Baixar</a>
             </div>
           </div>
