--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     window.onload = function() {
         var mod = new bootstrap.Modal(document.getElementById("myModal"), {});
-        <!-- mod.show();--> 
+        mod.show(); 
     }
   </script>
   
@@ -540,7 +540,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Uma nova versão(2.0.8) esta disponível realize o download para continuar utilizando nossos serviços.
+        Estamos preparando uma nova versão, desta vez com expiração apenas no final de 2025. Disponível em breve.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
