--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Estamos preparando uma nova versão, desta vez com expiração apenas no final de 2025. Disponível em breve.
+        Nova Versão disponível. Com vencimento ate 2025. Use o Internet Explore ou Edge caso tenha probelma em baixar com o Chrome.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
