--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
                 class="btn btn-success btn-lg">Baixar</a>
             </div>
           </div>
-          <p class="text-body-secondary">Versão Atual: V2.0.9 <br>Antes de Baixar leia nosso artigo abaixo, utilize o edge</p>
+          <p class="text-body-secondary">Versão Atual: V2.0.9 <br>Antes de Baixar leia nosso artigo abaixo, <a
+              href="#download">fazendo dowload</a>. Lembre-se de utilize o edge</p>
           <h3 class="fw-bold">Always ON</h3>
           <p class="text-body-secondary">Este é um projeto independente, voltado para Desktop que se utiliza dos eventos
             do windows, como teclado e mouse. Com fins de simular um humano utilizando constantemente seu computador,
