--- a/index.html
+++ b/index.html
@@ -539,7 +539,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Nova Versão disponível. Com vencimento ate 2025. Use o Internet Explore ou Edge caso tenha probelma em baixar com o Chrome.
+        <p>Nova Versão disponível. Com vencimento ate 2025. Use o Internet Explore ou Edge caso tenha probelma em baixar com o Chrome.</p>
+        <p class="text-body-secondary">Versão Atual: V2.0.9 <br>Antes de Baixar leia nosso artigo abaixo, <a
+              href="#download">fazendo dowload</a>. Lembre-se de utilize o edge</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
