--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     window.onload = function() {
         var mod = new bootstrap.Modal(document.getElementById("myModal"), {});
-        mod.show(); 
+        //mod.show(); 
     }
   </script>
   
