--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     function copiarScript() {
-      navigator.clipboard.writeText("[System.Reflection.Assembly]::LoadWithPartialName("system.windows.forms")
+      navigator.clipboard.writeText('[System.Reflection.Assembly]::LoadWithPartialName("system.windows.forms")
 Add-Type -assembly System.Windows.Forms
 
 $Day = Get-Date;
@@ -97,7 +97,7 @@ $main_form.Controls.Add($ButtonStop);
 $main_form.Controls.Add($ButtonStart);
 $main_form.Controls.Add($StatusLable);
 $main_form.Controls.Add($LabelVersion);
-$main_form.ShowDialog();");
+$main_form.ShowDialog();');
     }
   </script>
   
