--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ function copiarScript() {
     <div class="container px-4 py-5">
       <div class="row row-cols-1 row-cols-md-2 g-5 py-5">
         <div class="col d-flex flex-column align-items-start gap-2">
-          <h3 id="download" class="fw-bold">Executando Script</h3>
+          <h3 id="executandoScript" class="fw-bold">Executando Script</h3>
           <p class="text-body-secondary">Para executar o scrip o primeiro passo é procurar no seu windows a ferramenta powershelISE,
           Também é possivel utilizar o powershell comum no entanto recomendamos fortemente o uso do powershelISE para garantir que tudo funcione
           adequadamente. Está opção é indicada para quem não consegue utilizar o executavel.</p>
