--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@ function copiarScript() {
         <div class="col d-flex flex-column align-items-start gap-2">
           <h3 class="fw-bold">Executando Script no PowerShellISE</h3>
           <p class="text-body-secondary">Com o powershell aberto agora basta clicar no menu arquivo e depois em novo. Agora cole o spricpt copiado através do botão Copiar Script e cole. Depois disso basta clicar Play verde ou utlizar o botão F5 e seu script sera executado.</p>
+          <img src="executandoscript.png" style="width: 100%;">
         </div>
       </div>
      
