--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@ function copiarScript() {
                 class="btn btn-success btn-lg">Baixar</a>
             </div>
           </div>
-          <p class="text-body-secondary">Versão Atual: V2.0.9 <br>Antes de Baixar leia nosso artigo abaixo, <a
+          <p class="text-body-secondary">Versão Atual: V2.0.9 <br>Veja como executar o script ou baixar no topico <a
+              href="#executandoScript">ExecutandoScript</a>, e <a
               href="#download">fazendo dowload</a>. Lembre-se de utilize o edge</p>
           <h3 class="fw-bold">Always ON</h3>
           <p class="text-body-secondary">Este é um projeto independente, voltado para Desktop que se utiliza dos eventos
