--- a/index.html
+++ b/index.html
@@ -576,8 +576,8 @@ function copiarScript() {
       </div>
       <div class="modal-body">
         <p>Agora você tambem pode rodar o script caso não consiga baixar.</p>
-        <p class="text-body-secondary">Leia como executar o script. <a
-              href="#download">Caso prefira o executavel leia como fazendo dowload</a>. Lembre-se de utilize o edge</p>
+        <p class="text-body-secondary">Leia como executar o script. Caso prefira o executavel leia <a
+              href="#download">fazendo dowload</a>. Lembre-se de utilize o edge</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
